ec2.tf
resource "aws_instance" "k8s_master" {
  ami                         = "ami-042e8287309f5df03"
  instance_type               = "t2.micro"
  key_name                    = var.key_pair
  vpc_security_group_ids      = [aws_security_group.allow_ssh.id]
  subnet_id                   = aws_subnet.public.id
  associate_public_ip_address = true
  iam_instance_profile        = aws_iam_instance_profile.ssm_mgr_policy.name

  tags = {
    Name      = "k8s master"
    Defender  = "false"
  }
}

resource "aws_instance" "k8s_worker_1" {
  ami                         = "ami-08d4ac5b634553e16"
  instance_type               = "t2.micro"
  key_name                    = var.key_pair
  associate_public_ip_address = "true"
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.allow_ssh.id, aws_security_group.allow_http.id]

  tags = {
    Name      = "k8s worker"
    Defender  = "false"
  }
  user_data = <<-EOF
    #!/bin/bash
    set -ex
    # install Docker runtime
    sudo apt update -y
    sudo apt install ca-certificates curl gnupg lsb-release -y
    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
    sudo apt update -y
    sudo apt install docker-ce docker-ce-cli containerd.io -y
    sudo usermod -aG docker ubuntu
    sudo systemctl enable docker.service
    sudo systemctl enable containerd.service
    # install Defender
    sudo apt install jq -y
    AUTH_DATA="$(printf '{ "username": "%s", "password": "%s" }' "${var.PCC_ACCESS_KEY_ID}" "${var.PCC_SECRET_ACCESS_KEY}")"
    TOKEN=$(curl -sSLk -d "$AUTH_DATA" -H 'content-type: application/json' "${var.PCC_URL}/api/v1/authenticate" | jq -r ' .token ')
    DOMAINNAME=`echo ${var.PCC_URL} | cut -d'/' -f3`
    curl -sSLk -H "authorization: Bearer $TOKEN" -X POST "${var.PCC_URL}/api/v1/scripts/defender.sh" | sudo bash -s -- -c $DOMAINNAME -d "none" -m
    # setup environments for Log4Shell demo
    docker network create dirty-net
    docker container run -itd --rm --name vul-app-1 --network dirty-net fefefe8888/l4s-demo-app:1.0
    docker container run -itd --rm --name vul-app-2 --network dirty-net fefefe8888/l4s-demo-app:1.0
    docker container run -itd --rm --name att-svr --network dirty-net fefefe8888/l4s-demo-svr:1.0
    docker container run -itd --rm --network dirty-net --name attacker fefefe8888/my-ubuntu:18.04
    # build collections
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"name":"Log4Shell demo - vul-app-1 - ${random_string.suffix.id}","containers":["vul-app-1"],"hosts":["*"],"images":["fefefe8888/l4s-demo-app:1.0"],"labels":["*"],"appIDs":["*"],"functions":["*"],"namespaces":["*"],"accountIDs":["*"],"codeRepos":["*"],"clusters":["*"]}' "${var.PCC_URL}/api/v1/collections"
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"name":"Log4Shell demo - vul-app-2 - ${random_string.suffix.id}","containers":["vul-app-2"],"hosts":["*"],"images":["fefefe8888/l4s-demo-app:1.0"],"labels":["*"],"appIDs":["*"],"functions":["*"],"namespaces":["*"],"accountIDs":["*"],"codeRepos":["*"],"clusters":["*"]}' "${var.PCC_URL}/api/v1/collections"
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"name":"Shell demo - attacker - ${random_string.suffix.id}","containers":["attacker"],"hosts":["*"],"images":["fefefe8888/my-ubuntu:18.04"],"labels":["*"],"appIDs":["*"],"functions":["*"],"namespaces":["*"],"accountIDs":["*"],"codeRepos":["*"],"clusters":["*"]}' "${var.PCC_URL}/api/v1/collections"
    # build runtime rules
    NEW_RULES='[{"name":"vul-app-2 - ${random_string.suffix.id}","previousName":"","collections":[{"name":"Log4Shell demo - vul-app-2 - ${random_string.suffix.id}"}],"advancedProtection":true,"processes":{"effect":"prevent","blacklist":[],"whitelist":[],"checkCryptoMiners":true,"checkLateralMovement":true,"checkParentChild":true,"checkSuidBinaries":true},"network":{"effect":"alert","blacklistIPs":[],"blacklistListeningPorts":[],"whitelistListeningPorts":[],"blacklistOutboundPorts":[],"whitelistO [...]
    ALL_RULES=$(curl -k -X GET -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.PCC_URL}/api/v1/policies/runtime/container" | jq --argjson nr "$NEW_RULES" ' .rules = $nr + .rules ')
    curl -k -X PUT -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.PCC_URL}/api/v1/policies/runtime/container" -d "$ALL_RULES"
    # add WaaS rules
    NEW_RULES='[{"name":"vul-app-2 - ${random_string.suffix.id}","collections":[{"name":"Log4Shell demo - vul-app-2 - ${random_string.suffix.id}"}],"applicationsSpec":[{"appID":"app-0001","sessionCookieSameSite":"Lax","customBlockResponse":{},"banDurationMinutes":5,"certificate":{"encrypted":""},"tlsConfig":{"minTLSVersion":"1.2","metadata":{"notAfter":"0001-01-01T00:00:00Z","issuerName":"","subjectName":""},"HSTSConfig":{"enabled":false,"maxAgeSeconds":31536000,"includeSubdomains":false,"preloa [...]
    ALL_RULES=$(curl -k -X GET -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.PCC_URL}/api/v1/policies/firewall/app/container" | jq --argjson nr "$NEW_RULES" ' .rules = $nr + .rules ')
    curl -k -X PUT -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.PCC_URL}/api/v1/policies/firewall/app/container" -d "$ALL_RULES"
    # get container model id and force activate
    PROFILE_ID=$(curl -k -X GET -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.PCC_URL}/api/v1/profiles/container" | jq -r ' .[] | select(.image == "fefefe8888/l4s-demo-app:1.0") | ._id ')
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"state": "manualLearning"}' "${var.PCC_URL}/api/v1/profiles/container/$PROFILE_ID/learn"
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"state": "manualActive"}' "${var.PCC_URL}/api/v1/profiles/container/$PROFILE_ID/learn"
    PROFILE_ID=$(curl -k -X GET -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.PCC_URL}/api/v1/profiles/container" | jq -r ' .[] | select(.image == "fefefe8888/l4s-demo-svr:1.0") | ._id ')
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"state": "manualLearning"}' "${var.PCC_URL}/api/v1/profiles/container/$PROFILE_ID/learn"
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"state": "manualActive"}' "${var.PCC_URL}/api/v1/profiles/container/$PROFILE_ID/learn"
    PROFILE_ID=$(curl -k -X GET -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.PCC_URL}/api/v1/profiles/container" | jq -r ' .[] | select(.image == "fefefe8888/my-ubuntu:18.04") | ._id ')
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"state": "manualLearning"}' "${var.PCC_URL}/api/v1/profiles/container/$PROFILE_ID/learn"
    curl -k -X POST -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' -d '{"state": "manualActive"}' "${var.PCC_URL}/api/v1/profiles/container/$PROFILE_ID/learn"
    # enable WildFire
    curl -k -X PUT -H "authorization: Bearer $TOKEN" -H 'Content-Type: application/json' "${var.PCC_URL}/api/v1/settings/wildfire" -d '{"region":"sg","runtimeEnabled":true,"complianceEnabled":true,"uploadEnabled":true,"graywareAsMalware":false}'
    EOF

  root_block_device {
    encrypted = true
  }
  metadata_options {
    http_endpoint = "enabled"
    http_tokens   = "required"
  }
}
